--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port = 8080
+server.port = ${PORT:5000}
 
-spring.datasource.url = jdbc:postgresql://localhost/tp-db-forum
-spring.datasource.username = tp-db-forum
+spring.datasource.url = jdbc:postgresql://localhost/forum
+spring.datasource.username = forum
 spring.datasource.password = 123456
 spring.datasource.hikari.maximum-pool-size = 10
